# fem-lattice-solver

./: .gitignore  README.md  batch_solver.py  benchmark.py  biaxial_test.py  main.py  mesh_file_list.py  mesh_file_list.txt  node30_list.txt  node31_list.txt  result.txt  result_node30.txt  result_node31.txt  setup_instructions.md  shear_test.py  solver.py  solver_auto.py  split_mesh_list.py  test.py  test_ke_compare.py  test_stiff.py
cpp/: CMakeLists.txt  read_fem_tetra4.cpp  read_gmsh_tetra4.cpp  tetra4_fem_core.cpp
femcore/: __init__.py  assembly.py  io.py  utils.py
